--- a/index.html
+++ b/index.html
@@ -33,12 +33,9 @@
     seven lines seems like it's enough
   </p>
 
-  <a href="#"><span class="icon-twitter"></span></a>
-  <div class="links">
-    <a class="btn btn-social-icon btn-twitter">
-      <span class="fa fa-twitter"></span>
-    </a>
-  </div>
+  <a class="">
+    <span class=""></span>
+  </a>
 
   <nav class="nav-main">
     <ul>
