Update CSS to not conflict with particlesJS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!doctype html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Jack Mills</title>
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="http://hdqwalls.com/wallpapers/gradient-texture-cubes.jpg"></script>
   <script src="js/vendor/bootstrap.min.js"></script>
   <script src="js/vendor/particles.min.js"></script>
@@ -24,18 +24,13 @@
   <p class="body-header">Jack Mills</p>
   <p class="body-subheader">Web Developer</p>
   <p class="body-paragraph">
-    Hi! I'm Jack Mills and I'm a web developer and I suck huge
-    it's okay to be upsetti
-    Don't be spaghetti just eat some moms vomit sweater
-    this paragraph
-    is getting pretty big
-    I just need to test if it all works out properly
-    seven lines seems like it's enough
+    Hi! I'm Jack Mills and I'm a web developer
+    Lorem Ipsum and all that
+    beautiful stuff
+    4 lines
+    5 lines
+    6 lines
   </p>
-
-  <a class="">
-    <span class=""></span>
-  </a>
 
   <nav class="nav-main">
     <ul>
@@ -51,9 +46,6 @@
 
 <!-- PROJECTS START -->
 <div class="projects">
-  <p class="">
-    Hello!
-  </p>
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
@@ -73,7 +65,6 @@
   </footer>
 </div>
 <!-- FOOTER END -->
-<canvas class='background'></canvas>
+<canvas class="background"></canvas>
 <script src="js/main.js"></script>
 </body>
-</html>
