Fix particles.js interactivity issue

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 <!-- HEADER END -->
 
 <!-- PROJECTS START -->
-<!--<div class="projects">
+<div class="projects">
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-</div>-->
+</div>
 <!-- PROJECTS END -->
 
 <!-- CONTACT START -->
