Add new font and nav bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" rel="stylesheet">
 
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="http://hdqwalls.com/wallpapers/gradient-texture-cubes.jpg"></script>
