--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" rel="stylesheet">
 
   <script src="https://use.fontawesome.com/c40a15b95c.js"></script>
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="http://hdqwalls.com/wallpapers/gradient-texture-cubes.jpg"></script>
   <script src="js/vendor/bootstrap.min.js"></script>
   <script src="js/vendor/particles.min.js"></script>
