test paragraph text for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <title>Jack Mills</title>
   <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -33,8 +34,7 @@
   <p class="body-header">Jack Mills</p>
   <p class="body-subheader">Web Developer</p>
   <p class="body-paragraph">
-    Hi! I'm Jack Mills and I'm a web developer
-    Lorem Ipsum and all that
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa. Nam finibus felis magna, a hendrerit felis ornare at. Morbi dignissim vel sem non imperdiet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse molestie purus non massa faucibus porta. Phasellus a commodo dui. Nullam accumsan lacus vel massa sollicitudin convallis. In venenatis tortor sit amet nisl iaculis porta. Aliquam erat volutpat. Sed nulla eros, lacinia ut arcu sagittis, aliquet dignissim leo. Nam diam nisl, consectetur quis tellus eu, lobortis posuere neque.
   </p>
   <img class="project-image center-block" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <div class="social-links fa-2x text-center">
