add bootstrap containers

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </ul>
 </div>
 <!-- HEADER START -->
-<div id="home" class="overlay">
+<div id="home" class="overlay container">
   <p class="body-header">Jack Mills</p>
   <p class="body-subheader">Web Developer</p>
   <p class="body-paragraph">
@@ -65,11 +65,11 @@
 <!-- ABOUT END -->
 
 <!-- PROJECTS START -->
-<div id="projects">
+<div id="projects" class="container">
   <p class="body-subheader">
     Here are some projects I have worked on
   </p>
-  <div class="container top-buffer">
+  <div class="top-buffer">
     <div class="row row-grid text-center image-hover">
       <a href="#"><img class="project-image col-sm-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
       <img class="project-image col-sm-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
