add text-center class to divs

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </ul>
 </div>
 <!-- HEADER START -->
-<div id="home" class="overlay container">
+<div id="home" class="overlay container text-center">
   <p class="body-header">Jack Mills</p>
   <p class="body-subheader">Web Developer</p>
   <p class="body-paragraph">
@@ -65,7 +65,7 @@
 <!-- ABOUT END -->
 
 <!-- PROJECTS START -->
-<div id="projects" class="container">
+<div id="projects" class="container text-center">
   <p class="body-subheader">
     Here are some projects I have worked on
   </p>
