Add media queries for navbar

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <!-- CONTACT END -->
 
 <!-- FOOTER START -->
-<div>
+<div id="footer">
   <hr>
   <footer class="text-center">
     <p>&copy; Jack Mills 2017</p>
