Fix div overlap issue and add media queries for navbar opacity

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <p class="body-paragraph">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa. Nam finibus felis magna, a hendrerit felis ornare at. Morbi dignissim vel sem non imperdiet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse molestie purus non massa faucibus porta. Phasellus a commodo dui. Nullam accumsan lacus vel massa sollicitudin convallis. In venenatis tortor sit amet nisl iaculis porta. Aliquam erat volutpat. Sed nulla eros, lacinia ut arcu sagittis, aliquet dignissim leo. Nam diam nisl, consectetur quis tellus eu, lobortis posuere neque.
   </p>
-  <img class="project-image center-block" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+  <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <div class="social-links fa-2x text-center">
     <ul>
       <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
@@ -59,7 +59,7 @@
 <!-- HEADER END -->
 
 <!-- ABOUT START -->
-<div id="about">
+<div id="about" class="container text-center">
 
 </div>
 <!-- ABOUT END -->
@@ -83,7 +83,7 @@
 <!-- PROJECTS END -->
 
 <!-- CONTACT START -->
-<div id="contact">
+<div id="contact" class="container text-center">
 
 </div>
 <!-- CONTACT END -->
