Add jQuery media queries for navbar and social icons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa. Nam finibus felis magna, a hendrerit felis ornare at. Morbi dignissim vel sem non imperdiet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse molestie purus non massa faucibus porta. Phasellus a commodo dui. Nullam accumsan lacus vel massa sollicitudin convallis. In venenatis tortor sit amet nisl iaculis porta. Aliquam erat volutpat. Sed nulla eros, lacinia ut arcu sagittis, aliquet dignissim leo. Nam diam nisl, consectetur quis tellus eu, lobortis posuere neque.
   </p>
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-  <div class="social-links fa-2x text-center">
+  <div id="social" class="social-links fa-2x text-center">
     <ul>
       <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
       <li><a href="#"><i class="fa fa-github-square"></i></a></li>
@@ -46,7 +46,7 @@
     </ul>
   </div>
 
-  <nav class="nav-main">
+  <nav id="navbar-main" class="nav-main">
     <ul>
       <li><a id="home-btn">Home</a></li>
       <li><a id="about-btn">About</a></li>
