Add compatibility for certain browsers on resizing

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!-- ABOUT END -->
 
 <!-- PROJECTS START -->
-<div id="projects" class="container text-center">
+<div id="projects" class="container-fluid text-center">
   <p class="body-subheader">
     Here are some projects I have worked on
   </p>
