Test for 'about page' and bug fix for iOS

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 <!-- PARTICLES -->
 <div id="particles-js"></div>
-<div class="nav-fixed">
+<div id="navbar-fixed" class="nav-fixed">
   <ul>
     <li><a id="home-btn-fixed">Home</a></li>
     <li><a id="about-btn-fixed">About</a></li>
@@ -59,24 +59,31 @@
 <!-- HEADER END -->
 
 <!-- ABOUT START -->
-<div id="about" class="container text-center">
-
+<div id="about" class="">
+  <div class="top-buffer container text-center">
+    <p class="body-subheader top-buffer">Here is what I do and how I do it</p>
+    <div class="row row-grid text-center">
+      <p class="col-sm-6 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
+      <p class="col-sm-3 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
+      <p class="col-sm-3 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
+    </div>
+  </div>
 </div>
 <!-- ABOUT END -->
 
 <!-- PROJECTS START -->
-<div id="projects" class="container-fluid text-center">
-  <p class="body-subheader">
+<div id="projects" class="">
+  <p class="body-subheader top-buffer">
     Here are some projects I have worked on
   </p>
-  <div class="top-buffer">
+  <div class="top-buffer container text-center">
     <div class="row row-grid text-center image-hover">
-      <a href="#"><img class="project-image col-sm-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
-      <img class="project-image col-sm-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-      <img class="project-image col-sm-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-      <img class="project-image col-sm-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-      <img class="project-image col-sm-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-      <img class="project-image col-sm-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+      <a href="#"><img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
+      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
     </div>
   </div>
 </div>
