--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
 <!-- ABOUT START -->
 <div id="about" class="">
+  <p class="body-subheader top-buffer">Here is what I do and how I do it</p>
   <div class="top-buffer container text-center">
-    <p class="body-subheader top-buffer">Here is what I do and how I do it</p>
     <div class="row row-grid text-center">
       <p class="col-sm-6 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
       <p class="col-sm-3 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
@@ -73,9 +73,7 @@
 
 <!-- PROJECTS START -->
 <div id="projects" class="">
-  <p class="body-subheader top-buffer">
-    Here are some projects I have worked on
-  </p>
+  <p class="body-subheader top-buffer">Here are some projects I have worked on</p>
   <div class="top-buffer container text-center">
     <div class="row row-grid text-center image-hover">
       <a href="#"><img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
