Fix another bug with div overlapping on iOS

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- ABOUT START -->
 <div id="about" class="">
-  <p class="body-subheader top-buffer">Here is what I do and how I do it</p>
+  <p class="body-subheader">Here is what I do and how I do it</p>
   <div class="top-buffer container text-center">
     <div class="row row-grid text-center">
       <p class="col-sm-6 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
