Edit intro paragraph margins

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 </div>
 <!-- HEADER START -->
 <div id="home" class="overlay container text-center">
-  <p class="body-header">Jack Mills</p>
+  <p class="body-header">JACK MILLS</p>
   <p class="body-subheader">Web Developer</p>
-  <p class="body-paragraph">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa. Nam finibus felis magna, a hendrerit felis ornare at. Morbi dignissim vel sem non imperdiet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse molestie purus non massa faucibus porta. Phasellus a commodo dui. Nullam accumsan lacus vel massa sollicitudin convallis. In venenatis tortor sit amet nisl iaculis porta. Aliquam erat volutpat. Sed nulla eros, lacinia ut arcu sagittis, aliquet dignissim leo. Nam diam nisl, consectetur quis tellus eu, lobortis posuere neque.
-  </p>
+  <div class="body-paragraph-container">
+    <p class="body-paragraph">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa. Nam finibus felis magna, a hendrerit felis ornare at. Morbi dignissim vel sem non imperdiet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse molestie purus non massa faucibus porta. Phasellus a commodo dui. Nullam accumsan lacus vel massa sollicitudin convallis. In venenatis tortor sit amet nisl iaculis porta. Aliquam erat volutpat. Sed nulla eros, lacinia ut arcu sagittis, aliquet dignissim leo. Nam diam nisl, consectetur quis tellus eu, lobortis posuere neque.
+    </p>
+  </div>
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <div id="social" class="social-links fa-2x text-center">
     <ul>
@@ -75,13 +77,25 @@
 <div id="projects" class="">
   <p class="body-subheader top-buffer">Here are some projects I have worked on</p>
   <div class="top-buffer container text-center">
-    <div class="row row-grid text-center image-hover">
-      <a href="#"><img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
+    <div class="row row-grid text-center">
+      <div class="image-hover">
+        <a href="#"><img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
+        <p class="body-paragraph">Hello world!</p>
+      </div>
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+    </div>
+  </div>
+</div>
+
+<div>
+  <div class="row">
+    <div class="project-image text-center col-md-4">
+      <img src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+        <div class="caption">Hello World</div>
     </div>
   </div>
 </div>
