Fix paragraph spacing on mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <p class="body-subheader">Web Developer</p>
   <div class="body-paragraph-container">
     <p class="body-paragraph">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa. Nam finibus felis magna, a hendrerit felis ornare at. Morbi dignissim vel sem non imperdiet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse molestie purus non massa faucibus porta. Phasellus a commodo dui. Nullam accumsan lacus vel massa sollicitudin convallis. In venenatis tortor sit amet nisl iaculis porta. Aliquam erat volutpat. Sed nulla eros, lacinia ut arcu sagittis, aliquet dignissim leo. Nam diam nisl, consectetur quis tellus eu, lobortis posuere neque.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.
     </p>
   </div>
   <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
