Add some design and accent colour

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
 <!-- PARTICLES -->
 <div id="particles-js"></div>
+<div id="particles-js2"></div>
 <div id="navbar-fixed" class="nav-fixed">
   <ul>
     <li><a id="home-btn-fixed">Home</a></li>
@@ -35,10 +36,9 @@
   <p class="body-subheader">Web Developer</p>
   <div class="body-paragraph-container">
     <p class="body-paragraph">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.
+      Hi! I'm Jack. I am a Front End Developer living in Surrey, England. I like to solve problems.
     </p>
   </div>
-  <img class="project-image" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
   <div id="social" class="social-links fa-2x text-center">
     <ul>
       <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
