Update contact section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <p class="body-subheader">Web Developer</p>
   <div class="body-paragraph-container">
     <p class="body-paragraph">
-      Hi! I'm Jack. I am a Front End Developer living in Surrey, England. I like to solve problems.
+      Hi! I'm Jack. I am a Front End Developer living in Surrey, England.<br /> I like to solve problems.
     </p>
   </div>
   <div id="social" class="social-links fa-2x text-center">
@@ -62,7 +62,7 @@
 
 <!-- ABOUT START -->
 <div id="about" class="">
-  <p class="body-subheader top-buffer">Here is what I do and how I do it</p>
+  <p class="body-subheader top-buffer">Here is what I do and how I do it.</p>
   <div class="top-buffer container text-center">
     <div class="row row-grid text-center">
       <p class="col-sm-6 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
@@ -75,12 +75,11 @@
 
 <!-- PROJECTS START -->
 <div id="projects" class="">
-  <p class="body-subheader top-buffer">Here are some projects I have worked on</p>
-  <div class="top-buffer container text-center">
+  <p class="body-subheader top-buffer">Here are some projects I have worked on.</p>
+  <div class="container text-center">
     <div class="row row-grid text-center">
       <div class="image-hover">
         <a href="#"><img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
-        <p class="body-paragraph">Hello world!</p>
       </div>
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
@@ -90,30 +89,17 @@
     </div>
   </div>
 </div>
-
-<div>
-  <div class="row">
-    <div class="project-image text-center col-md-4">
-      <img src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-        <div class="caption">Hello World</div>
-    </div>
-  </div>
-</div>
 <!-- PROJECTS END -->
 
 <!-- CONTACT START -->
-<div id="contact" class="container text-center">
-
+<div id="contact" class="">
+  <div class="container text-center">
+    <p class="body-subheader top-buffer">Get in touch.</p>
+    <p class="body-paragraph">You can reach me at:</p>
+    <p class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">jackramills@yahoo.co.uk</a></p>
+  </div>
 </div>
 <!-- CONTACT END -->
 
-<!-- FOOTER START -->
-<div id="footer">
-  <hr>
-  <footer class="text-center">
-    <p>&copy; Jack Mills 2017</p>
-  </footer>
-</div>
-<!-- FOOTER END -->
 <script src="js/main.js"></script>
 </body>
