--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- HEADER START -->
 <div id="home" class="overlay container text-center">
   <p class="body-header">JACK MILLS</p>
-  <p class="body-subheader">Web Developer</p>
+  <p class="body-subheader"><span style="color: #33e3f5"><strong>>_</strong></span> Web Developer</p>
   <div class="body-paragraph-container">
     <p class="body-paragraph">
       Hi! I'm Jack. I am a Front End Developer living in Surrey, England.<br /> I like to solve problems.
@@ -54,7 +54,7 @@
       <li><a id="about-btn">About</a></li>
       <li><a id="projects-btn">Projects</a></li>
       <li><a id="contact-btn">Contact</a></li>
-      <li><a id="">Test</a></li>
+      <li><a id="">CV</a></li>
     </ul>
   </nav>
 </div>
@@ -62,12 +62,29 @@
 
 <!-- ABOUT START -->
 <div id="about" class="">
-  <p class="body-subheader top-buffer">Here is what I do and how I do it.</p>
-  <div class="top-buffer container text-center">
+  <p class="body-subheader top-buffer">What I do and how I do it.</p>
+  <div class="container text-center">
     <div class="row row-grid text-center">
-      <p class="col-sm-6 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
-      <p class="col-sm-3 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
-      <p class="col-sm-3 body-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat, eros a interdum pellentesque, lectus leo ultrices purus, ac maximus nisl ligula vitae massa.</p>
+      <div class="col-sm-4 text-center">
+        <p class="body-paragraph-header"><span style="color: #33e3f5"><strong>>_</strong></span> I'm Jack Mills, a Front End Developer.</p>
+        <p class="body-paragraph">
+          It was over 10 years ago that I used my first computer and started to build things. Today I am building websites, web applications and software solutions.
+        </p>
+        <p class="body-paragraph">
+          I've always been attracted to the process of problem solving and development. I enjoy every aspect of my work.
+        </p>
+        <p class="body-paragraph">
+          I would love to be part of what you're creating!<br /> <span class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">Get in contact.</a></span>
+        </p>
+      </div>
+      <div class="col-sm-4 text-center">
+        <p class="body-paragraph-subheader">My Skills</p>
+        <p class="body-paragraph">Javascript n stuff</p>
+      </div>
+      <div class="col-sm-4 text-center">
+        <p class="body-paragraph-subheader">3rd Column</p>
+        <p class="body-paragraph">idk lol</p>
+      </div>
     </div>
   </div>
 </div>
@@ -79,11 +96,8 @@
   <div class="container text-center">
     <div class="row row-grid text-center">
       <div class="image-hover">
-        <a href="#"><img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
+        <a href="https://github.com/J-Mills/Betterbar"><img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
       </div>
-      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
       <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
     </div>
