--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader">3rd Column</p>
-        <p class="body-paragraph">idk lol</p>
+        <p class="body-paragraph">i dunno what to put here yet</p>
       </div>
     </div>
   </div>
