Add skills and left aligned paragraph text

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
   <p class="body-header">JACK MILLS</p>
   <p class="body-subheader"><span style="color: #33e3f5"><strong>>_</strong></span> Web Developer</p>
   <div class="body-paragraph-container">
-    <p class="body-paragraph">
+    <p class="body-paragraph" style="text-align: center;">
       Hi! I'm Jack. I am a Front End Developer living in Surrey, England.<br /> I like to solve problems.
     </p>
   </div>
   <div id="social" class="social-links fa-2x text-center">
     <ul>
       <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-      <li><a href="#"><i class="fa fa-github-square"></i></a></li>
+      <li><a href="https://github.com/J-Mills"><i class="fa fa-github-square"></i></a></li>
       <li><a href="#"><i class="fa fa-codepen"></i></a></li>
       <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
     </ul>
@@ -79,11 +79,19 @@
       </div>
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader">My Skills</p>
-        <p class="body-paragraph">Javascript n stuff</p>
+        <p class="body-paragraph-heavy">Front End Technologies:</p>
+        <p class="body-paragraph">HTML5, CSS3, Javascript, jQuery, CoffeeScript, Angular 1.X</p>
+        <p class="body-paragraph-heavy">Back End Technologies:</p>
+        <p class="body-paragraph">Node.js</p>
+        <p class="body-paragraph-heavy">Software and other Technologies:</p>
+        <p class="body-paragraph">Python, Bash, Linux</p>
+        <p class="body-paragraph-heavy">Other Skills:</p>
+        <p class="body-paragraph">Graphic Design and Typography, </p>
       </div>
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader">3rd Column</p>
         <p class="body-paragraph">i dunno what to put here yet</p>
+        <p class="body-paragraph"></p>
       </div>
     </div>
   </div>
@@ -108,8 +116,8 @@
 <!-- CONTACT START -->
 <div id="contact" class="">
   <div class="container text-center">
-    <p class="body-subheader top-buffer">Get in touch.</p>
-    <p class="body-paragraph">You can reach me at:</p>
+    <p class="body-paragraph-header top-buffer" style="text-align: center">Get in touch.</p>
+    <p class="body-paragraph" style="text-align: center">You can reach me at:</p>
     <p class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">jackramills@yahoo.co.uk</a></p>
   </div>
 </div>
