--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
     <p class="body-paragraph-header top-buffer" style="text-align: center">Get in touch.</p>
     <p class="body-paragraph" style="text-align: center">You can reach me at:</p>
     <p class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">jackramills@yahoo.co.uk</a></p>
+    <div id="social" class="social-links fa-2x text-center">
+      <ul>
+        <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+        <li><a href="https://github.com/J-Mills"><i class="fa fa-github-square"></i></a></li>
+        <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+      </ul>
+    </div>
   </div>
 </div>
 <!-- CONTACT END -->
