--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       <ul>
         <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
         <li><a href="https://github.com/J-Mills"><i class="fa fa-github-square"></i></a></li>
-        <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+        <li><a href=""><i class="fa fa-codepen"></i></a></li>
+        <li><a href=""><i class="fa fa-twitter-square"></i></a></li>
       </ul>
     </div>
   </div>
