--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
 <!-- HEADER START -->
 <div id="home" class="overlay container text-center">
   <p class="body-header">JACK MILLS</p>
-  <p class="body-subheader"><span style="color: #33e3f5"><strong>>_</strong></span> Web Developer</p>
+  <p class="body-subheader"><span style="color: #33e3f5"><strong>&gt;_</strong></span> Web Developer</p>
   <div class="body-paragraph-container">
-    <p class="body-paragraph" style="text-align: center;">
+    <p class="body-paragraph" style="text-align: center">
       Hi! I'm Jack. I am a Front End Developer living in Surrey, England.<br /> I like to solve problems.
     </p>
   </div>
   <div id="social" class="social-links fa-2x text-center">
     <ul>
-      <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/"><i class="fa fa-linkedin-square"></i></a></li>
       <li><a href="https://github.com/J-Mills"><i class="fa fa-github-square"></i></a></li>
       <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+      <li><a href="https://twitter.com/TheMizzazz"><i class="fa fa-twitter-square"></i></a></li>
     </ul>
   </div>
 
@@ -62,11 +62,11 @@
 
 <!-- ABOUT START -->
 <div id="about" class="">
-  <p class="body-subheader top-buffer">What I do and how I do it.</p>
-  <div class="container text-center">
-    <div class="row row-grid text-center">
+  <div class="container">
+    <p class="body-subheader top-buffer">What I do and how I do it.</p>
+    <div class="row text-center">
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-header"><span style="color: #33e3f5"><strong>>_</strong></span> I'm Jack Mills, a Front End Developer.</p>
+        <p class="body-paragraph-header"><span style="color: #33e3f5"><strong>&gt;_</strong></span> I'm Jack Mills, a Front End Developer.</p>
         <p class="body-paragraph">
           It was over 10 years ago that I used my first computer and started to build things. Today I am building websites, web applications and software solutions.
         </p>
@@ -80,13 +80,13 @@
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader">My Skills</p>
         <p class="body-paragraph-heavy">Front End Technologies:</p>
-        <p class="body-paragraph">HTML5, CSS3, Javascript, jQuery, CoffeeScript, Angular 1.X</p>
+        <p class="body-paragraph">HTML5, CSS3, Javascript, jQuery, CoffeeScript</p>
         <p class="body-paragraph-heavy">Back End Technologies:</p>
         <p class="body-paragraph">Node.js</p>
         <p class="body-paragraph-heavy">Software and other Technologies:</p>
         <p class="body-paragraph">Python, Bash, Linux</p>
         <p class="body-paragraph-heavy">Other Skills:</p>
-        <p class="body-paragraph">Graphic Design and Typography, </p>
+        <p class="body-paragraph">Graphic Design and Typography, Photoshop</p>
       </div>
       <div class="col-sm-4 text-center">
         <p class="body-paragraph-subheader">3rd Column</p>
@@ -100,14 +100,27 @@
 
 <!-- PROJECTS START -->
 <div id="projects" class="">
-  <p class="body-subheader top-buffer">Here are some projects I have worked on.</p>
-  <div class="container text-center">
-    <div class="row row-grid text-center">
-      <div class="image-hover">
-        <a href="https://github.com/J-Mills/Betterbar"><img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" /></a>
+  <div class="container">
+    <p class="body-subheader top-buffer">Here are some projects I have worked on.</p>
+    <div class="row text-center">
+      <div class="image-hover col-md-4">
+        <a href="https://github.com/J-Mills/Betterbar"><img class="project-image img-responsive" src="img/betterbar.png" /></a>
+        <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Ubersicht BetterBar</u></p>
+        <p class="body-paragraph" style="text-align: center">A widget made for MacOS built on Ubersicht</p>
+        <p class="body-paragraph-light">(Javascript, CoffeeScript, Python, JSON, Bash)</p>
       </div>
-      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
-      <img class="project-image col-md-4" src="https://placeholdit.imgix.net/~text?txtsize=28&bg=0099ff&txtclr=ffffff&txt=300%C3%97300&w=300&h=300" />
+      <div class="image-hover col-md-4">
+        <a href="https://github.com/J-Mills/Mr-Robot-2.0"><img class="project-image img-responsive" src="img/mrrobot.png" /></a>
+        <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>Mr Robot The Discord Bot</u></p>
+        <p class="body-paragraph" style="text-align: center">Discord Chat Bot built with discord.js</p>
+        <p class="body-paragraph-light">(Javascript, Node.js, Dicord.js, JSON)</p>
+      </div>
+      <div class="image-hover col-md-4">
+        <a href="https://github.com/J-Mills/J-Mills.github.io"><img class="project-image img-responsive" src="img/jmills.png" /></a>
+        <p class="body-paragraph-subheader" style="text-align: center; margin-top: 10px"><u>This Website</u></p>
+        <p class="body-paragraph" style="text-align: center">A website to showcase my projects and skills</p>
+        <p class="body-paragraph-light">(HTML5, CSS3, Javascript, jQuery, Bootstrap)</p>
+      </div>
     </div>
   </div>
 </div>
@@ -119,12 +132,12 @@
     <p class="body-paragraph-header top-buffer" style="text-align: center">Get in touch.</p>
     <p class="body-paragraph" style="text-align: center">You can reach me at:</p>
     <p class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">jackramills@yahoo.co.uk</a></p>
-    <div id="social" class="social-links fa-2x text-center">
+    <div id="" class="social-links fa-2x text-center">
       <ul>
-        <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/"><i class="fa fa-linkedin-square"></i></a></li>
         <li><a href="https://github.com/J-Mills"><i class="fa fa-github-square"></i></a></li>
         <li><a href=""><i class="fa fa-codepen"></i></a></li>
-        <li><a href=""><i class="fa fa-twitter-square"></i></a></li>
+        <li><a href="https://twitter.com/TheMizzazz"><i class="fa fa-twitter-square"></i></a></li>
       </ul>
     </div>
   </div>
