Correct text placement under images

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p class="body-paragraph-heavy">Front End Technologies:</p>
         <p class="body-paragraph">HTML5, CSS3, Javascript, jQuery, CoffeeScript</p>
         <p class="body-paragraph-heavy">Back End Technologies:</p>
-        <p class="body-paragraph">Node.js</p>
+        <p class="body-paragraph">Node.js, WordPress</p>
         <p class="body-paragraph-heavy">Software and other Technologies:</p>
         <p class="body-paragraph">Python, Bash, Linux</p>
         <p class="body-paragraph-heavy">Other Skills:</p>
