Finish About section

--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@
         <p class="body-paragraph">Graphic Design and Typography, Photoshop</p>
       </div>
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-subheader">3rd Column</p>
-        <p class="body-paragraph">i dunno what to put here yet</p>
-        <p class="body-paragraph"></p>
+        <p class="body-paragraph-subheader">Current Projects</p>
+        <p class="body-paragraph-heavy">Here are some things I'm working on now:</p>
+        <ul class="current-projects">
+          <li>Updating this website</li>
+          <li>Creating some small codepen apps</li>
+          <li>Following the <a class="project-link" href="https://javascript30.com/">#JavaScript30</a> challenge</li>
+        </ul>
       </div>
     </div>
   </div>
