Add icons for better visual grepping tm

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- HEADER START -->
 <div id="home" class="overlay container text-center">
   <p class="body-header">JACK MILLS</p>
-  <p class="body-subheader"><span style="color: #33e3f5"><strong>&gt;_</strong></span> Web Developer</p>
+  <p class="body-subheader"><i class="fa fa-terminal terminal-colour"></i> Web Developer</p>
   <div class="body-paragraph-container">
     <p class="body-paragraph" style="text-align: center">
       Hi! I'm Jack. I am a Front End Developer living in Surrey, England.<br /> I like to solve problems.
@@ -51,11 +51,11 @@
 
   <nav id="navbar-main" class="nav-main">
     <ul>
-      <li><a id="home-btn">Home</a></li>
-      <li><a id="about-btn">About</a></li>
-      <li><a id="projects-btn">Projects</a></li>
-      <li><a id="contact-btn">Contact</a></li>
-      <li><a id="">CV</a></li>
+      <li><a id="home-btn"><i class="fa fa-home"></i> Home</a></li>
+      <li><a id="about-btn"><i class="fa fa-user"></i> About</a></li>
+      <li><a id="projects-btn"><i class="fa fa-terminal"></i> Projects</a></li>
+      <li><a id="contact-btn"><i class="fa fa-phone"></i> Contact</a></li>
+      <li><a id=""><i class="fa fa-bars"></i> CV</a></li>
     </ul>
   </nav>
 </div>
@@ -67,7 +67,7 @@
     <p class="body-subheader top-buffer">What I do and how I do it.</p>
     <div class="row text-center">
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-header"><span style="color: #33e3f5"><strong>&gt;_</strong></span> I'm Jack Mills, a Front End Developer.</p>
+        <p class="body-paragraph-header"><i class="fa fa-terminal terminal-colour"></i> I'm Jack Mills, a Front End Developer.</p>
         <p class="body-paragraph">
           It was over 10 years ago that I used my first computer and started to build things. Today I am building websites, web applications and software solutions.
         </p>
