Add fade in effect for home

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <!-- PARTICLES -->
 <div id="particles-js"></div>
 <div id="particles-js2"></div>
+
 <div id="navbar-fixed" class="nav-fixed">
   <ul>
     <li><a id="home-btn-fixed">Home</a></li>
@@ -33,9 +34,9 @@
 </div>
 <!-- HEADER START -->
 <div id="home" class="overlay container text-center">
-  <p class="body-header">JACK MILLS</p>
-  <p class="body-subheader"><i class="fa fa-terminal terminal-colour"></i> Web Developer</p>
-  <div class="body-paragraph-container">
+  <p id="name" class="body-header">JACK MILLS</p>
+  <p id="title" class="body-subheader"><i class="fa fa-terminal terminal-colour"></i> Web Developer</p>
+  <div id="description" class="body-paragraph-container">
     <p class="body-paragraph" style="text-align: center">
       Hi! I'm Jack. I am a Front End Developer living in Surrey, England.<br /> I like to solve problems.
     </p>
@@ -75,11 +76,11 @@
           I've always been attracted to the process of problem solving and development. I enjoy every aspect of my work.
         </p>
         <p class="body-paragraph">
-          I would love to be part of what you're creating!<br /> <span class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">Get in contact.</a></span>
+          I would love to be part of what you're creating!<br /> <span class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">Send me an email.</a></span>
         </p>
       </div>
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-subheader">My Skills</p>
+        <p class="body-paragraph-subheader"><u>My Skills</u></p>
         <p class="body-paragraph-heavy">Front End Technologies:</p>
         <p class="body-paragraph">HTML5, CSS3, Javascript, jQuery, CoffeeScript</p>
         <p class="body-paragraph-heavy">Back End Technologies:</p>
@@ -90,7 +91,7 @@
         <p class="body-paragraph">Graphic Design and Typography, Photoshop</p>
       </div>
       <div class="col-sm-4 text-center">
-        <p class="body-paragraph-subheader">Current Projects</p>
+        <p class="body-paragraph-subheader"><u>Current Projects</u></p>
         <p class="body-paragraph-heavy">Here are some things I'm working on now:</p>
         <ul class="current-projects">
           <li>Updating this website</li>
