Make links open in new tab

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   </div>
   <div id="social" class="social-links fa-2x text-center">
     <ul>
-      <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/"><i class="fa fa-linkedin-square"></i></a></li>
-      <li><a href="https://github.com/J-Mills"><i class="fa fa-github-square"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
-      <li><a href="https://twitter.com/TheMizzazz"><i class="fa fa-twitter-square"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+      <li><a href="https://github.com/J-Mills" target="_blank"><i class="fa fa-github-square"></i></a></li>
+      <li><a href="#"><i class="fa fa-codepen" target="_blank"></i></a></li>
+      <li><a href="https://twitter.com/TheMizzazz" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
     </ul>
   </div>
 
@@ -96,7 +96,7 @@
         <ul class="current-projects">
           <li>Updating this website</li>
           <li>Creating some small codepen apps</li>
-          <li>Following the <a class="project-link" href="https://javascript30.com/">#JavaScript30</a> challenge</li>
+          <li>Following the <a class="project-link" href="https://javascript30.com/" target="_blank">#JavaScript30</a> challenge</li>
         </ul>
       </div>
     </div>
@@ -140,10 +140,10 @@
     <p class="contact-email"><a href="mailto:jackramills@yahoo.co.uk">jackramills@yahoo.co.uk</a></p>
     <div id="" class="social-links fa-2x text-center">
       <ul>
-        <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/"><i class="fa fa-linkedin-square"></i></a></li>
-        <li><a href="https://github.com/J-Mills"><i class="fa fa-github-square"></i></a></li>
-        <li><a href=""><i class="fa fa-codepen"></i></a></li>
-        <li><a href="https://twitter.com/TheMizzazz"><i class="fa fa-twitter-square"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/jack-mills-765b17105/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+        <li><a href="https://github.com/J-Mills" target="_blank"><i class="fa fa-github-square"></i></a></li>
+        <li><a href=""><i class="fa fa-codepen" target="_blank"></i></a></li>
+        <li><a href="https://twitter.com/TheMizzazz" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
       </ul>
     </div>
   </div>
